<resources>
    <string name="app_name">FitnessKit</string>
    <string name="activities">Activities</string>
    <string name="applications">Applications</string>
    <string name="add">Add</string>
    <string name="chat">Chat</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>